# Unity-Simple-IL2CPP-Based-Translator

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/example/demoapp/: MainActivity.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
unity-il2cpp-translator/: build.gradle
unity-il2cpp-translator/src/androidTest/java/com/example/unity_il2cpp_translator/: ExampleInstrumentedTest.java
unity-il2cpp-translator/src/main/cpp/: CMakeLists.txt  il2cpp_manager.cpp  il2cpp_manager.h  il2cpp_type.h  translator.cpp  translator.h  unity_il2cpp_translator.cpp
unity-il2cpp-translator/src/main/java/com/example/unity_il2cpp_translator/: UnityIl2cppTranslator.java
unity-il2cpp-translator/src/test/java/com/example/unity_il2cpp_translator/: ExampleUnitTest.java
